# mxl-web

./: .gitignore  .prettierrc  Cargo.toml  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
src/: 404.html  app.d.ts  app.html
src/lib/: Math.svelte  Navbar.svelte  Page.svelte  Slider.svelte  ThemeSwitcher.svelte  config.ts
src/lib-rs/: lib.rs
src/lib-rs/explicit/: euler.rs  mod.rs  rk2.rs  rk45.rs
src/lib-rs/implicit/: backward_euler.rs  kvaerno45.rs  mod.rs  utils.rs
src/lib-rs/models/: lotka_volterra.rs  mod.rs  npq.rs
src/lib/chartjs/: lineChart.svelte
src/lib/integrators/: euler.ts  index.ts
src/lib/integrators/explicit/: bosh3.ts  euler.ts  index.ts  rk2.ts  rk45.ts  tsit5.ts
src/lib/integrators/implicit/: backwardEuler.ts  index.ts  kvaerno45.ts  utils.ts
src/lib/plotly/: lineChart.svelte
src/lib/plots/: barChart.svelte  lineChart.svelte
src/lib/simulations/: pam.ts
src/lib/workers/: lotka-volterra.worker.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/dynamic-entrobactin/: +page.svelte
src/routes/npq/: +page.svelte  model.ts
src/routes/plotly-test/: +page.svelte
src/routes/population-dynamics/: +page.svelte
src/routes/tripartite/: +page.svelte
