[package]
name = "wa-integrate"
version = "0.1.0"
edition = "2024"
include = ["/src/lib-rs"]

[lib]
path = "src/lib-rs/lib.rs"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
ordered-float = "5.0.0"
num-traits = "0.2.19"
